Error support and dark mode fixes for viz

--- a/tests/test-core/qunit/css/qunit-visual-signals.css
+++ b/tests/test-core/qunit/css/qunit-visual-signals.css
@@ -215,6 +215,12 @@
     color: black;
 }
 
+@media (prefers-color-scheme: dark) {
+    .node-name {
+        color: black;
+    }
+}
+
 .node-value {
     font-size: 16px;
     color: #555;
